# dating_coach

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  docker-compose.yml
backend/: alembic.ini  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: authentication.py  communication_profile.py  consents.py  conversations.py  health.py  privacy.py  users.py
backend/app/auth/: __init__.py  verifier.py
backend/app/core/: __init__.py  config.py
backend/app/db/: base.py  models.py  session.py
backend/app/domain/: __init__.py  conversation_events.py  conversation_import.py
backend/app/repositories/: __init__.py  conversations.py  users.py
backend/app/schemas/: __init__.py  conversation_events.py  conversations.py  users.py
backend/migrations/: README  env.py
backend/migrations/versions/: 20260714_0001_phase3_identity_consent_data.py  20260714_0002_conversation_import_review.py  20260714_0003_extraction_provenance.py  20260715_0004_conversation_event_runtime.py
backend/tests/: conftest.py  test_authentication.py  test_config.py  test_conversation_events_api.py  test_conversation_import_api.py  test_conversations_api.py  test_database_schema.py  test_design_tokens.py  test_health.py  test_phase3_scope.py  test_privacy_deletion.py  test_user_data_api.py
docs/: AI-Scoring-Engine.md  AI-System-Architecture.md  Conversation-Event-Spec.md  accessibility.md  api-contracts.md  architecture.md  backend-architecture.md  database-schema.md  decision-log.md  design-language.md  motion-system.md  (+14 more)
(+142 files in other folders)
